# context_vs_fbr

./: README.md  pyproject.toml  requirements.txt  run_clinical_experiments.sh  run_synthetic_experiments.sh  spleen-analysis.ipynb  spleen_analysis.py  synthetic-analysis.ipynb  synthetic_analysis.py  test_analysis_scripts.py
.github/workflows/: test.yaml
results/spleen-atunet/: foreground_ratios-32.csv  foreground_ratios-48.csv  foreground_ratios-64.csv  foreground_ratios-80.csv  foreground_ratios-96.csv  spleen-atunet-32-1.csv  spleen-atunet-32-2.csv  spleen-atunet-32-3.csv  spleen-atunet-48-1.csv  spleen-atunet-48-2.csv  spleen-atunet-48-3.csv  spleen-atunet-64-1.csv  spleen-atunet-64-2.csv  spleen-atunet-64-3.csv  spleen-atunet-80-1.csv  spleen-atunet-80-2.csv  spleen-atunet-80-3.csv  spleen-atunet-96-1.csv  spleen-atunet-96-2.csv  spleen-atunet-96-3.csv
results/spleen-unet/: foreground_ratios-32.csv  foreground_ratios-48.csv  foreground_ratios-64.csv  foreground_ratios-80.csv  foreground_ratios-96.csv  spleen-unet-32-1.csv  spleen-unet-32-2.csv  spleen-unet-32-3.csv  spleen-unet-48-1.csv  spleen-unet-48-2.csv  spleen-unet-48-3.csv  spleen-unet-64-1.csv  spleen-unet-64-2.csv  spleen-unet-64-3.csv  spleen-unet-80-1.csv  spleen-unet-80-2.csv  spleen-unet-80-3.csv  spleen-unet-96-1.csv  spleen-unet-96-2.csv  spleen-unet-96-3.csv
results/spleen-unetr/: foreground_ratios-32.csv  foreground_ratios-48.csv  foreground_ratios-80.csv  foreground_ratios-96.csv  (+15 more)
spleen_experiments/: spleen_3d_wandb_unetr.py
synthetic_experiments/: synthetic_3d_wandb_unet.py
(+65 files in other folders)
