[project]
name = "context-vs-fbr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "monai~=0.9.1",
    "nibabel>=4.0.2",
    "numpy~=1.23.2",
    "pillow>=10.4.0",
    "torch~=2.0.1",
    "tqdm>=4.67.1",
    "wandb>=0.13.3",
]
