[project]
name = "context-vs-fbr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "monai~=0.9.1",
    "nibabel>=4.0.2",
    "numpy~=1.23.2",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "seaborn>=0.13.2",
    "torch~=2.0.1",
    "tqdm>=4.67.1",
    "wandb>=0.13.3",
]
